[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Yunyan Hong"]
description = "A key-value store"


[dependencies]
clap ="2.27.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

criterion = "0.3"
rand = "0.6.5"
sled = "0.34.7"
log = "0.4"
env_logger = "0.9"

crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
crossbeam = "0.7.1"
rayon = "1.0.3"